--- a/src/App.xaml
+++ b/src/App.xaml
@@ -19,6 +19,7 @@
                 <tb:TaskbarIcon.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Show" Click="tbShow_Click"/>
+                        <MenuItem Header="Refresh" Click="tbRefresh_Click"/>
                         <MenuItem Header="Exit" Click="tbExit_Click"/>
                     </ContextMenu>
                 </tb:TaskbarIcon.ContextMenu>
